# rps-ai

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ai.rs  game.rs  main.rs  player.rs  test.rs
src/tests/: test.rs
