[package]
name = "rps_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.189", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
crossterm = "0.27.0"

[dev-dependencies]
rstest = "0.18.2"
divan = "0.1.0"
better-panic = "0.3.0"